# PongGame

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  Texture.cpp  Texture.hpp  ai.cpp  ai.hpp  dot.cpp  dot.hpp  engine.cpp  engine.hpp  entity.hpp  gameLoop.cpp  gameLoop.hpp  main.cpp  paddle.cpp  paddle.hpp  pong  pong.cpp  pongDebug  scoreboard.cpp  scoreboard.hpp  timer.hpp
engine/: CMakeLists.txt
engine/src/: engine.cpp  engine.hpp  keyCodes.hpp
engine/src/sdl/: Texture.cpp  Texture.hpp  engineSDL.cpp  engineSDL.hpp  inputSDL.cpp  inputSDL.hpp  textureSDL.cpp  textureSDL.hpp
engine/src/vlk/: circleVertex.hpp  engineVLK.cpp  engineVLK.hpp  inputsVLK.cpp  inputsVLK.hpp  renderer.cpp  renderer.hpp  textureVLK.cpp  textureVLK.hpp  ubo.hpp  utils.hpp  vertex.hpp  vulkanInit.cpp  vulkanInit.hpp  vulkanRenderData.cpp  vulkanRenderData.hpp  windowVLK.cpp  windowVLK.hpp
engine/src/vlk/shaders/: circleFrag.spv  circleShader.frag  circleShader.vert  circleVert.spv  compile.sh  quadShader.frag  quadVert.spv  shader.vert  vert.spv
include/: Texture.hpp  dot.hpp  gameLoop.hpp  paddle.hpp  scoreboard.hpp
old/: Makefile  pong.cpp
old/referCode/: 10_colorKeying
old/referCode/example/16_true_type_fonts/: 16_true_type_fonts.cpp
pong/: CMakeLists.txt
pong/src/: ai.cpp  dot.cpp  dot.hpp  entity.hpp  gameLoop.cpp  gameLoop.hpp  main.cpp  scoreboard.hpp
referCode/: 10_colorKeying.cpp  Makefile
referCode/example/26_motion/: 26_motion.cpp
src/: dot.cpp  gameLoop.cpp  main.cpp
